# datareader

./: .flake8.cfg  .gitignore  .isort.cfg  .yamllint.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.ci/: lint.sh
.github/workflows/: lint.yaml  release.yaml  test.yaml
doc/: datareader.html  datareader.loader.html  datareader.parser.html  datareader.parser_abc.html  datareader.sql_parser.html  datareader.text_parser.html  index.html  search.js
doc/datareader/: loader.html  parser.html  parser_abc.html  sql_parser.html  text_parser.html
doc/datareader/loader/: loader.html  main.html
doc/datareader/parser/: parser_abc.html  sql_parser.html  text_parser.html
examples/: sql_parse.py  table_load.py  text_parse.py
examples/data/sql/: multiple_insert.sql  single_insert.sql
scripts/: coverage-badge.sh  postgres-run.sh
src/datareader/: helpers.py  parser_abc.py  sql_parser.py  text_parser.py
src/datareader/loader/: __init__.py  config.py  loader.py  main.py
src/datareader/parser/: __init__.py  parser_abc.py  sql_parser.py  text_parser.py
tests/: conftest.py  test_config.py  test_helpers.py  test_sql_parser.py  test_sql_parser_helpers.py  test_text_parser.py
tests/data/text/: test.txt
tests/test_cases/: __init__.py  sql_parser_cases.py  tests_abc.py  text_parser_cases.py
